@@ -39,5 +39,6 @@ number_of_classes=1
 class1  = ip
 filter1 ="ip"
 cutoff1 = 15000
-file_size1 = 100000000
-disk_size1 = 100000000
+file_size1 = 10000
+disk_size1 = 100000
+post_process1=/bin/echo
